<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/constraintlayout_docs"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/relativelayout_docs_tab"
        android:layout_width="match_parent"
        android:layout_height="72dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/image_button_docs_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:background="@null"
            android:layout_marginStart="24dp"
            android:layout_centerVertical="true"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:src="@drawable/header_back" />

        <TextView
            android:id="@+id/textview_docs_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/black"
            android:textSize="@dimen/normal"
            android:textStyle="bold"
            android:ellipsize="end"
            android:maxLines="1"
            android:layout_toStartOf="@+id/imageview_docs_more"
            android:layout_toEndOf="@id/image_button_docs_back"
            android:layout_centerVertical="true"
            tools:text="지구온난화 시나리오 기반의 동아시아 기후변화 분석" />

        <ImageView
            android:id="@+id/imageview_docs_more"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginEnd="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:src="@drawable/more" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearlayout_docs_fragment_switch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/relativelayout_docs_tab"
        android:gravity="center"
        android:padding="4dp"
        android:background="@drawable/main_button"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:weightSum="2">

        <Button
            android:id="@+id/button_docs_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="내용"
            android:layout_margin="4dp"
            android:textColor="@color/white"
            android:background="@drawable/main_button_selected"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:layout_weight="1"
            style="@style/GlobaSelectedButton"/>

        <Button
            android:id="@+id/button_docs_summary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="4dp"
            android:textColor="@color/black"
            android:background="@drawable/main_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:text="정리"
            android:layout_weight="1"
            style="@style/GlobaButton"/>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerview_docs_detail"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbarFadeDuration="0"
        android:scrollbars="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        app:layout_constraintTop_toBottomOf="@+id/linearlayout_docs_fragment_switch"
        app:layout_constraintBottom_toTopOf="@id/seekbar_audio_progress"/>

    <LinearLayout
        android:id="@+id/linearlayout_document_audio"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="#222222" />

    <TextView
        android:id="@+id/textview_document_audio_now_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginStart="20dp"
        app:layout_constraintStart_toStartOf="@id/linearlayout_document_audio"
        app:layout_constraintTop_toTopOf="@id/linearlayout_document_audio"
        app:layout_constraintBottom_toTopOf="@id/image_button_document_audio_play"
        tools:text="00:00" />

    <TextView
        android:id="@+id/textview_document_audio_end_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="다운로드 중..."
        android:textColor="@color/white"
        android:layout_marginEnd="20dp"
        app:layout_constraintEnd_toEndOf="@id/linearlayout_document_audio"
        app:layout_constraintTop_toTopOf="@id/linearlayout_document_audio"
        app:layout_constraintBottom_toTopOf="@id/image_button_document_audio_play" />

    <ImageButton
        android:id="@+id/imageview_document_replay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/docs_replay_5"
        app:layout_constraintTop_toTopOf="@id/linearlayout_document_audio"
        app:layout_constraintBottom_toBottomOf="@id/linearlayout_document_audio"
        app:layout_constraintEnd_toStartOf="@id/image_button_document_audio_play"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintHorizontal_chainStyle="packed"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/image_button_document_audio_play"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:visibility="invisible"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:src="@drawable/docs_play"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toTopOf="@id/linearlayout_document_audio"
        app:layout_constraintBottom_toBottomOf="@id/linearlayout_document_audio"
        app:layout_constraintStart_toEndOf="@id/imageview_document_replay"
        app:layout_constraintEnd_toStartOf="@id/imageview_document_forward"
        tools:visibility="visible" />

    <ImageButton
        android:id="@+id/imageview_document_forward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:visibility="invisible"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:src="@drawable/docs_forward_5"
        app:layout_constraintTop_toTopOf="@id/linearlayout_document_audio"
        app:layout_constraintBottom_toBottomOf="@id/linearlayout_document_audio"
        app:layout_constraintStart_toEndOf="@id/image_button_document_audio_play"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie_audio_download"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/linearlayout_document_audio"
        app:layout_constraintBottom_toBottomOf="@id/linearlayout_document_audio"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_speed="1"
        app:lottie_rawRes="@raw/loading" />

    <SeekBar
        android:id="@+id/seekbar_audio_progress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-4dp"
        android:layout_marginLeft="-16dp"
        android:layout_marginRight="-16dp"
        android:progress="0"
        android:max="100"
        android:thumb="@drawable/audio_thumb"
        android:progressDrawable="@drawable/audio_seekbar"
        app:layout_constraintBottom_toTopOf="@id/linearlayout_document_audio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ProgressBar
        android:id="@+id/progressbar_docs_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>